postcss/testData/inspections/nesting/simpleSelectorWithoutNestedRuleset.pcss
<error descr="Selector matches unknown element h">h</error> {}